[package]
name = "rustdca"
version = "0.1.0"
authors = ["torstein <t.soernes@gmail.com>"]

[dependencies]
ndarray = "0.11.2"
lazy_static = "1.0.1"
rand = "0.5.3"
ordered-float = "0.5.0"
revord = "0.0.2"
structopt = "0.2.10"
chrono = "0.4.4"
ctrlc = "3.1.1"
log = "0.4.3"
simplelog = "0.5.2"
itertools = "0.7.8"
